--- a/literalura/src/main/resources/application.properties
+++ b/literalura/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=literalura
+spring.datasource.url=jdbc:postgresql://localhost:5432/literalura
+spring.datasource.username=maxchaconparedes
+spring.datasource.password=Alizee2018
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.format-sql = true
