--- a/literalura/src/main/resources/application.properties
+++ b/literalura/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/literalura
+spring.datasource.url=jdbc:postgresql://localhost/literalura
 spring.datasource.username=maxchaconparedes
 spring.datasource.password=Alizee2018
 spring.datasource.driver-class-name=org.postgresql.Driver
